<resources>
    <string name="app_name">ToDoListApp</string>
    <string name="list_date_format">"MMMM dd, yyyy 'at' h:mm:ss a"</string>
    <string name="to_do_list_url">http://cesi.cleverapps.io/notes</string>
    <string name="send_note_url">http://cesi.cleverapps.io/notes</string>
    <string name="get_users_url">http://cesi.cleverapps.io/users</string>
    <string name="sign_in_url">http://cesi.cleverapps.io/signin</string>
    <string name="sign_up_url">http://cesi.cleverapps.io/signup</string>
    <string name="username_hint">username</string>
    <string name="password_hint">password</string>
    <string name="task_hint">new task</string>
    <string name="create_account">Create account</string>
    <string name="new_user">New user</string>
    <string name="create_new_user">Create new user</string>
    <string name="sign_in">Sign in</string>
    <string name="already_registered">Already registered ?</string>
    <string name="successfully_signed_in">You successfully signed in</string>
    <string name="successfully_signed_up">You successfully signed up</string>
    <string name="sign_in_error">Sign in failed. Check your login and your password</string>
    <string name="sign_up_error">Signup failed</string>
    <string name="no_network">No network connection</string>
    <string name="retrieving_data_error">Unable to retrieve data</string>
    <string name="network_error">network error</string>
    <string name="parsing_error">parsing error</string>
    <string name="to_do_list_title">Todo list</string>
    <string name="user_list_title">User list</string>
    <string name="no_update_allowed">An already done task cannot be updated</string>
    <string name="no_update_possible">No task update possible while offline</string>
    <string name="task_updated">Task successfully updated</string>
    <string name="task_not_updated">Error updating task</string>
    <string name="task_sent">Task successfully sent</string>
    <string name="task_not_sent">Error sending task </string>
    <string name="refresh">Refresh</string>
    <string name="disconnect">Disconnect</string>
    <string name="wrote">wrote</string>
    <string name="signed_up">registered</string>
    <string name="or">or</string>
</resources>