<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_sign_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <ProgressBar
        android:id="@+id/sign_up_progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:elevation="5dp"
        android:visibility="gone" />

    <android.support.v7.widget.CardView
        android:id="@+id/sign_up_cardview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        app:cardBackgroundColor="@color/viewcard_background"
        app:cardCornerRadius="@dimen/viewcard_corner_radius"
        app:cardElevation="8dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingBottom="5dip"
            android:paddingLeft="5dip"
            android:paddingRight="5dip"
            android:paddingTop="8dip">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:gravity="end"
                android:text="@string/new_user"
                android:textSize="12sp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/sign_up_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/sign_up_password"
                    android:layout_alignLeft="@+id/sign_up_password"
                    android:layout_alignStart="@+id/sign_up_password"
                    android:layout_marginBottom="10dp"
                    android:ems="10"
                    android:hint="@string/username_hint"
                    android:inputType="textPersonName"
                    android:textSize="20sp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/sign_up_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/sign_up_create_account"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="10dp"
                    android:ems="10"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword"
                    android:textSize="20sp" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/sign_up_create_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/sign_up_password"
                android:layout_alignLeft="@+id/sign_up_password"
                android:layout_alignParentBottom="true"
                android:layout_alignRight="@+id/sign_up_password"
                android:layout_alignStart="@+id/sign_up_password"
                android:background="@color/button_background"
                android:text="@string/create_account" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>
