<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_sign_in"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <ProgressBar
        android:id="@+id/sign_in_progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="60dip"
        android:layout_centerVertical="true"
        android:elevation="5dp"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/upperLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/middleView"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:id="@+id/sign_in_cardview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            app:cardBackgroundColor="@color/viewcard_background"
            app:cardCornerRadius="@dimen/viewcard_corner_radius"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:paddingBottom="5dip"
                android:paddingLeft="5dip"
                android:paddingRight="5dip"
                android:paddingTop="8dip">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@string/already_registered"
                    android:textSize="12sp" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/sign_in_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_above="@+id/sign_in_connexion"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="10dp"
                        android:ems="10"
                        android:hint="@string/username_hint"
                        android:inputType="textUri|textPassword"
                        android:textSize="20sp" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/sign_in_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_above="@+id/sign_in_name"
                        android:layout_alignLeft="@+id/sign_in_name"
                        android:layout_alignStart="@+id/sign_in_name"
                        android:layout_marginBottom="10dp"
                        android:ems="10"
                        android:hint="@string/password_hint"
                        android:inputType="textPassword"
                        android:textSize="20sp" />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/sign_in_connexion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/sign_in_create_account_button"
                    android:layout_alignStart="@+id/sign_in_create_account_button"
                    android:layout_centerVertical="true"
                    android:background="@color/button_background"
                    android:text="@string/sign_in" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </RelativeLayout>

    <View
        android:id="@+id/middleView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_centerVertical="true" />

    <RelativeLayout
        android:id="@+id/lowerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/middleView"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:id="@+id/sign_in_sign_up_cardview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            app:cardBackgroundColor="@color/viewcard_background"
            app:cardCornerRadius="@dimen/viewcard_corner_radius"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:paddingBottom="5dip"
                android:paddingLeft="5dip"
                android:paddingRight="5dip"
                android:paddingTop="8dip">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/sign_in_create_account_image"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_toLeftOf="@+id/sign_in_create_account_image"
                        android:gravity="center"
                        android:text="@string/create_new_user"
                        android:textSize="15sp"
                        android:textAlignment="center" />

                    <ImageView
                        android:id="@+id/sign_in_create_account_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_gravity="end"
                        app:srcCompat="@drawable/ic_people_black_36dp" />

                </RelativeLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="invisible">

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:ems="10"
                        android:inputType="textPassword"
                        android:textSize="20sp" />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/sign_in_create_account_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:background="@color/button_background"
                    android:text="@string/create_account"
                    android:textAlignment="center" />
            </LinearLayout>

        </android.support.v7.widget.CardView>

    </RelativeLayout>

</RelativeLayout>
